Modification sur la modale

--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="infoModalLabel">Formulaire Bancaire</h5>
+                    <h2 class="modal-title text-center text-success border bg-secondary" id="infoModalLabel">Formulaire Bancaire</h2>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
-                    <p id="modalMessage"></p>
+                <div class="modal-body text-center">
+                    <p id="modalMessage1"></p>
+                    <p id="modalMessage2"></p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
