Ajustement des erreurs du fomrulaire

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </tr>
                     <tr>
                         <td><label class="text-success fw-bold"for="codeConfidentiel">Code confidentiel</label></td>
-                        <td><input type="text" id="codeConfidentiel" name="codeConfidentiel" class="form-control" required placeholder="FR12345ABCX"></td>
+                        <td><input type="text" id="codeConfidentiel" name="codeConfidentiel" class="form-control" required placeholder="FR12345ABCx"></td>
                         <td><span id="codeConfidentielError" class="error-message fw-bolder"></span></td>
                     </tr>
                     <tr>
